src/index.css
body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
        sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}
body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
        sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.title {
    padding-top: 300px;
    padding-bottom: 100px;
    margin-top: 0;
    text-align: center;
    font-size: 50px;
}

.title-smaller {
    padding-bottom: 30px;
    margin-top: 0;
    text-align: center;
    font-size: 20px;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

button {
    display: inline-block;
    background: #000;
    color: #fff;
    border: none;
    padding: 10px 20px;
    margin: 10px;
    border-radius: 5px;
    cursor: pointer;
    text-decoration: none;
    font-size: 15px;
    font-family: inherit;
}

.container {
    margin: 0;
    position: absolute;
    text-align: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/*.backdrop {
  background: white;
  opacity: 50%;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 50px;
  height: 50px;
}*/

.home {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-size: cover;
    background-position: center;
    background-image: url("images/background.jpeg");
}

.suggest {
    padding-top: 10vh;
    padding-bottom: 10vh;
    position: relative;
    background-size: cover;
    background-position: center;
    background-color: #fff;
}

.save-recipe {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-size: cover;
  background-position: center;
  background-image: url("images/background.jpeg");
}

.search-recipe {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-size: cover;
  background-position: center;
  background-image: url("images/background.jpeg");
}

.search-recipe > .blurredBackground {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-size: cover;
  background-position: center;
  background-image: url("images/background.jpeg");
  filter: blur(10px);
  -webkit-filter: blur(10px);
  -moz-filter: blur(10px);
  -o-filter: blur(10px);
  -ms-filter: blur(10px);
  transform: scale(1.2);
}

.save-recipe > .blurredBackground {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-size: cover;
    background-position: center;
    background-image: url("images/background.jpeg");
    filter: blur(10px);
    -webkit-filter: blur(10px);
    -moz-filter: blur(10px);
    -o-filter: blur(10px);
    -ms-filter: blur(10px);
    transform: scale(1.2);
}

div {
    overflow: hidden;
}

.h1-padded {
    padding-bottom: 30px;
}

.ReactTags__remove {
    padding: 4px 0px;
    margin-left: 4px;
    margin-right: 0px;
    background-color: lightgray;
    color: #000;
}

.ReactTags__tagInput {    
    display: flex;
    justify-content: center;
    flex-flow: wrap;
}

.ReactTags__tagInputField {
    font-size: large;
    margin-bottom: 20px;
    padding: 8px;
    border-radius: 6px;
    border: solid darkgray 1px;    
}

.ReactTags__tagInputField:focus {
    outline: none;
}

.ReactTags__suggestions {
    width: 100%;
}

span:hover > mark {
    background-color: darkgray;
}

Input {
    font-size: large;
    margin-bottom: 20px;
    padding: 8px;
    border-radius: 6px;
    border: solid darkgray 1px;
}

.ReactTags__suggestions span {
    color: black;
    background-color: lightgray;
    margin: 4px 4px;
    padding: 6px 10px;
    padding-bottom: 8px;
    border-radius: 6px;
    font-size: small;    
}

.ReactTags__suggestions li {
    display:inline-flex;
}

.ReactTags__suggestions ul {
    display: flex;
    justify-content: center;
    padding: 0;
    margin: 2px;
}

.ReactTags__suggestions mark {
    background-color: lightgray;
}

.ReactTags__suggestions span:hover,
span .mark {
    background-color: darkgray;
}

.ReactTags__tag {
    color: black;
    background-color: lightgray;
    margin: 4px 4px;
    padding: 6px 10px;
    padding-bottom: 8px;
    border-radius: 6px;
    font-size: small;
}

span {
    text-align: center;
}

mark {
    background-color: lightgray;
}

li {
  list-style: none;
}

.suggestion-list > .container {
    position: relative;
    margin-top: 2vh;
    display: flex;
    justify-content: center;
}

.suggestion-list {
    padding-top: 2vh;
}

input.ReactTags__tagInputField {
    width: 100% !;
}

.suggest-inner {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 600px;
}

.tags-field:first-child {
    display: flex;
    justify-content: center;    
    width: 100%;
}

span.MuiTypography-root {
    font-size: 15px;
}

